# diwata

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  Cargo.toml  Design.md  Dockerfile  LICENSE  Notes.md  Procfile  README.md  TODO.md  launch.sh  release_run.sh  run.sh  run_airlines_ru.sh  run_bazaar.sh  run_dota.sh  run_mock.sh  run_sakila.sh  run_sakila_required_login.sh  run_sakila_sqlite.sh  run_sqlite_sakila.sh  rustfmt.toml
.heroku/: run.sh
crates/data_table/: Cargo.toml
crates/data_table/src/: lib.rs
crates/dataview/: Cargo.toml
crates/dataview/src/: dataview.rs  fields.rs  lib.rs
crates/intel/: Cargo.toml
crates/intel/src/: cache.rs  common.rs  context.rs  data_container.rs  data_modify.rs  data_read.rs  error.rs  field.rs  lib.rs  query_builder.rs  query_parser.rs  reference.rs  tab.rs  table_intel.rs  widget.rs  window.rs
crates/intel/src/data_read/: detail_record.rs
crates/intel/src/users/: mod.rs
crates/server/: Cargo.toml  run_sakila.sh
crates/server/src/: api.rs  context.rs  credentials.rs  error.rs  global.rs  handler.rs  lib.rs  main.rs  page.rs  session.rs
crates/text-client/: Cargo.toml
crates/text-client/src/: main.rs
crates/web-client/: Cargo.toml
crates/web-client/src/: lib.rs
crates/webapp/: Cargo.toml  index.html  start-dev.sh  start-fast-debug.sh  style.css
crates/webapp/src/: lib.rs
crates/webclient/: Cargo.toml  index.html  start-fast-debug.sh  start-release.sh  start.sh  style.css
crates/webclient/examples/: print_app.rs
crates/webclient/src/: app.rs  assets.rs  cmd.rs  data.rs  lib.rs  main.rs  widgets.rs
crates/webclient/src/app/: column_view.rs  datawindow.rs  detail_view.rs  field.rs  field_view.rs  row_view.rs  store.rs  tab.rs  tab_view.rs  table_view.rs  toolbar_view.rs  window_list_view.rs  window_view.rs
crates/webclient/src/widgets/: search_widget.rs
crates/webclient/static/: index.html
crates/webview/: Cargo.toml
crates/webview/examples/: print_app.rs
crates/webview/src/: app.rs  assets.rs  data.rs  lib.rs  rest_api.rs  widgets.rs
crates/webview/src/app/: column_view.rs  detail_view.rs  field_view.rs  page_view.rs  row_view.rs  tab_view.rs  table_view.rs  toolbar_view.rs  window_list_view.rs  window_view.rs
crates/witch-client/: Cargo.toml
crates/witch-client/src/: lib.rs  main.rs
crates/witch-client/witch/: Cargo.toml
crates/witch-client/witch/src/: lib.rs
crates/witch-client/witch/src/dataview/: mod.rs
dao/: Cargo.toml
dao/src/: column.rs  dao.rs  error.rs  lib.rs  rows.rs  table.rs  value.rs
dao_codegen/: Cargo.toml
dao_codegen/examples/: derive_dao.rs  derive_dao_usage.rs  sample.rs
dao_codegen/src/: column_derive.rs  dao_derive.rs  lib.rs  table_derive.rs
dbscripts/: add_users.sql  composite_foreign_key.sql  create_sample_db.sh  reimport_sakila_postgres.sh  setup.sh
diwata/: Cargo.toml
diwata/src/: error.rs  lib.rs  main.rs
installed_plugins/: README.md
installed_plugins/countries/: Cargo.toml
installed_plugins/user_role/: Cargo.toml
installed_plugins/user_role/src/: lib.rs
intel/: Cargo.toml
intel/src/: cache.rs  column.rs  common.rs  data_container.rs  data_modify.rs  data_read.rs  data_service.rs  error.rs  field.rs  foreign.rs  lib.rs  query_builder.rs  reference.rs  service.rs  tab.rs  table.rs  table_intel.rs  types.rs  widget.rs  window.rs
orm/: Cargo.toml
orm/src/: database.rs  entity.rs  error.rs  lib.rs  pg.rs  platform.rs  pool.rs
plugin_processor/: Cargo.toml
plugin_processor/src/: lib.rs  main.rs
plugins/: Cargo.toml
plugins/src/: lib.rs
server/: Cargo.toml  run_sakila.sh
server/src/: context.rs  credentials.rs  error.rs  global.rs  handler.rs  hyper_server.rs  lib.rs  main.rs
src/: main.rs
webclient/: .gitignore  app.js  build.sh  clean.sh  compile.sh  compile_release.sh  elm-package.json  icon.css  index.html  neon-link.js  release_compile.sh  style.css
webclient/src/: Constant.elm  Main.elm  Route.elm  Settings.elm  Util.elm
webclient/src/Data/: DataContainer.elm  Query.elm  Window.elm  WindowArena.elm
webclient/src/Data/Query/: Filter.elm  Order.elm  Sort.elm
webclient/src/Data/Window/: Author.elm  ColumnName.elm  Comment.elm  DataType.elm  Display.elm  Feed.elm  Field.elm  Filter.elm  GroupedWindow.elm  Lookup.elm  Presentation.elm  Record.elm  RecordDetail.elm  Tab.elm  TableName.elm  Value.elm  Widget.elm
webclient/src/Page/: Errored.elm  Home.elm  Login.elm  NotFound.elm  Profile.elm  Register.elm  Settings.elm  Window.elm  WindowArena.elm
webclient/src/Page/Window/: DetailedRecord.elm  Editor.elm
webclient/src/Request/: Helpers.elm  Profile.elm  User.elm  Window.elm
webclient/src/Request/Window/: Comments.elm  Delete.elm  Records.elm
webclient/src/Views/: Page.elm  Window.elm
webclient/src/Views/User/: Follow.elm
webclient/src/Views/Window/: DetailedRecord.elm  Favorite.elm  Feed.elm  Field.elm  GroupedWindow.elm  Presentation.elm  Row.elm  Searchbox.elm  Tab.elm  Toolbar.elm  Value.elm  Widget.elm
webclient/src/Widgets/: Dropdown.elm  DropdownDisplay.elm  FixDropdown.elm  NumericDropdown.elm  Tagger.elm  UuidDropdownDisplay.elm
webserver/: Cargo.toml
webserver/src/: error.rs  lib.rs  main.rs
witch-client/: Cargo.toml
witch-client/src/: lib.rs  main.rs
witch-client/witch/: Cargo.toml  Design.md
witch-client/witch/src/: lib.rs
witch-client/witch/src/dataview/: mod.rs
