[package]
name = "diwata"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "diwata"
path = "crates/server/src/main.rs"

[dependencies]
diwata_server = "0.1.2"
chrono = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.0"
structopt = "0.1"
structopt-derive = "0.1"
url = "1.5"
include_dir = "0.2"
cfg-if = "0.1.2"
diwata_intel = { version = "0.1.2", features = ["with-rustorm", "with-postgres"] }
rustorm =  {version = "0.13", features = ["with-postgres"]}
ron = "0.5.1"
actix-web = "1.0.0"
actix-files = "0.1.0"
actix-session = "0.1.0"
dotenv = "0.13.0"
env_logger = "0.5.10"
futures = "0.1.22"
log = "0.4.3"
sauron = "0.7.0"

[features]
with-sqlite = ["diwata_server/with-sqlite"]


[workspace]
members = [
    "crates/intel",
    "crates/server",
    "crates/text-client",
    "crates/data_table",
    "crates/webview",
    "crates/webapp",
]

exclude = [
    "crates/rustorm",
    "crates/rustorm/crates/dao",
    "crates/rustorm/crates/codegen",
]


[replace]
"rustorm_dao:0.3.0" = { path = "crates/rustorm/crates/dao" }
"rustorm_codegen:0.3.0" = { path = "crates/rustorm/crates/codegen" }
"rustorm:0.13.0" = { path = "crates/rustorm" }
"diwata_intel:0.1.2" = { path = "crates/intel" }
"diwata_server:0.1.2" = { path = "crates/server" }

#"sauron:0.7.0" = { path = "../sauron" }
#"sauron_vdom:0.7.0"= { path = "../sauron/crates/sauron_vdom" }
"sauron:0.7.0" = { git = "https://github.com/ivanceras/sauron.git" }
"sauron_vdom:0.7.0" = { git = "https://github.com/ivanceras/sauron.git" }

