[package]
name = "diwata"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]

[dependencies]
chrono = "0.4.0"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
lazy_static = "0.2.9"
dao = {path = "../rustorm/dao"}
rustorm = { path = "../rustorm", features = ["with-postgres"] }
rustorm_codegen = {path = "../rustorm/codegen"}
intel = {path = "../intel"}

[package.metadata.deb]
maintainer = "Jovansonlee Cesar <ivanceras@gmail.com>"
copyright = "2017, Jovansonlee Cesar <ivanceras@gmail.com>"
license-file = ["../LICENSE", "4"]
extended-description = """\
A user-friendly database interface for \
PostgreSQL."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["../target/release/diwata", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/diwata/README", "644"],
]

