[package]
name = "diwata"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]

[dependencies]
chrono = "0.4.0"
rocket = "0.3"
#rocket = {git = "https://github.com/SergioBenitez/Rocket"}
rocket_codegen = "0.3"
#rocket_codegen = {git = "https://github.com/SergioBenitez/Rocket"}
rocket_contrib = "0.3"
#rocket_contrib = {git = "https://github.com/SergioBenitez/Rocket"}
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
lazy_static = "1.0.0"
rustorm = { path = "../rustorm", features = ["with-postgres"] }
rustorm_codegen = {path = "../rustorm/codegen"}
dao = {path = "../rustorm/dao"}
intel = {path = "../intel"}
structopt = "0.1"
structopt-derive = "0.1"


[package.metadata.deb]
maintainer = "Jovansonlee Cesar <ivanceras@gmail.com>"
copyright = "2017, Jovansonlee Cesar <ivanceras@gmail.com>"
license-file = ["../LICENSE", "4"]
extended-description = """\
A user-friendly database interface for \
PostgreSQL."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["../target/release/diwata", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/diwata/README", "644"],
    ["../public/*", "var/lib/diwata/", "644"],
]

