[package]
name = "diwata_intel"
version = "0.1.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "Contains algorithmns and heuristics to interpret data"

[dependencies]
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
lazy_static = "1.0.0"
uuid = "0.5.1"
bigdecimal = "0.0.10"

[dependencies.rustorm]
#path = "../rustorm"
version = "0.10"

[dependencies.rustorm_codegen]
#path = "../rustorm/codegen"
version = "0.1"

[dependencies.rustorm_dao]
#path = "../rustorm/dao"
version = "0.1"

[replace]
"rustorm_dao:0.1.1" = { path = "../rustorm/dao" }
"rustorm_codegen:0.1.2" = { path = "../rustorm/codegen" }
"rustorm:0.10.3" = { path = "../rustorm" }
