[package]
name = "diwata_intel"
version = "0.1.2"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "Contains algorithmns and heuristics to interpret data"

[dependencies]
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
lazy_static = "1.0.0"
uuid = "0.5.1"
bigdecimal = "0.0.10"
url = "1.5"

[dependencies.rustorm]
version = "0.10"
features = ["with-postgres", "with-sqlite"]

[dependencies.rustorm_codegen]
version = "0.1"

[dependencies.rustorm_dao]
version = "0.1"

