[package]
name = "orm"
version = "0.1.0"
authors = ["lee"]

[dependencies]
postgres = {version = "0.15.1",features = ["with-uuid","with-chrono"], optional = true}
r2d2_postgres = "0.13.0"
postgres-shared = "0.4.0"
r2d2 = "0.7.4"
url = "1.5.1"
dao = {path = "../dao"}
cfg-if = "0.1.2"
uuid = "0.5.1"
chrono = "0.4.0"

[features]
with-postgres = ["postgres"]
