[package]
name = "orm"
version = "0.1.0"
authors = ["lee"]

[dependencies]
postgres = {version = "0.15.1",features = ["with-uuid","with-chrono"], optional = true}
r2d2_postgres = {version = "0.13.0", optional = true}
postgres-shared = "0.4.0"
r2d2 = "0.7.4"
url = "1.5.1"
dao = {path = "../dao"}
dao_codegen = {path = "../dao_codegen"}
cfg-if = "0.1.2"
uuid = "0.5.1"
chrono = "0.4.0"
rusqlite = {version = "0.12.0", optional = true}
r2d2_sqlite = {version = "0.2.1", optional = true}
mysql = {version = "12.0.3", optional = true}
oci_rs = {version = "0.5.0", optional = true}
tiberius = {version = "0.2.2", optional = true}

[features]
with-postgres = ["postgres", "r2d2_postgres"]
with-mysql = ["mysql"]
with-sqlite = ["rusqlite","r2d2_sqlite"]
with-oracle = ["oci_rs"]
with-mssql = ["tiberius"]
