[package]
name = "diwata_server"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
license = "MIT"
description = "Decides the routing of url request"

[dependencies]
chrono = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.0"
structopt = "0.1"
structopt-derive = "0.1"
hyper = "0.11"
env_logger = "0.3"
futures = "0.1.14"


[dependencies.diwata_intel]
path = "../intel"
version = "0.1"

[dependencies.rustorm]
#path = "../rustorm"
version = "0.10"
features = ["with-postgres", "with-sqlite"]

[dependencies.rustorm_codegen]
#path = "../rustorm/codegen"
version = "0.1"

[dependencies.rustorm_dao]
#path = "../rustorm/dao"
version = "0.1"


[package.metadata.deb]
maintainer = "Jovansonlee Cesar <ivanceras@gmail.com>"
copyright = "2017, Jovansonlee Cesar <ivanceras@gmail.com>"
license-file = ["../LICENSE", "4"]
extended-description = """\
A user-friendly database interface for \
PostgreSQL."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["../target/release/diwata", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/diwata/README", "644"],
    ["../public/*", "var/lib/diwata/", "644"],
]

