[package]
name = "diwata_intel"
version = "0.1.2"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
description = "Contains algorithmns and heuristics to interpret data"
edition = "2018"

[dependencies]
serde = "1.0.15"
serde_derive = "1.0.15"
serde_json = "1.0.3"
lazy_static = "1.0.0"
uuid = "0.5.1"
bigdecimal = "0.0.14"
url = "1.5"
rustorm_dao = "0.3"
rustorm =  {version = "0.13", features = ["with-postgres", "with-sqlite"]}

