[package]
name = "diwata_server"
version = "0.1.2"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
license = "MIT"
description = "Decides the routing of url request"
edition = "2018"

[dependencies]
log = "0.4"
chrono = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.0"
structopt = "0.1"
structopt-derive = "0.1"
hyper = "0.11"
env_logger = "0.3"
futures = "0.1.14"
url = "1.5"
include_dir = "0.2"
cfg-if = "0.1.2"


[dependencies.diwata_intel]
version = "0.1"

[dependencies.rustorm]
version = "0.11"
features = ["with-postgres", "with-sqlite"]





[package.metadata.deb]
maintainer = "Jovansonlee Cesar <ivanceras@gmail.com>"
copyright = "2017, Jovansonlee Cesar <ivanceras@gmail.com>"
license-file = ["../LICENSE", "4"]
extended-description = """\
A user-friendly database interface for \
PostgreSQL."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["../target/release/diwata", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/diwata/README", "644"],
    ["../public/*", "var/lib/diwata/", "644"],
]

