[package]
name = "diwata_server"
version = "0.1.2"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
license = "MIT"
description = "Decides the routing of url request"
edition = "2018"

[dependencies]
chrono = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
lazy_static = "1.0"
structopt = "0.1"
structopt-derive = "0.1"
url = "1.5"
include_dir = "0.2"
cfg-if = "0.1.2"
diwata_intel = { version = "0.1.2", features = ["with-rustorm", "with-postgres"] }
rustorm =  {version = "0.13", features = ["with-postgres"]}
ron = "0.5.1"
serde_urlencoded = "0.5.5"
actix-web = "1.0.0-beta.5"
actix-files = "0.1.0-beta.4"
actix-session = "0.1.0-beta.4"
dotenv = "0.13.0"
env_logger = "0.5.10"
futures = "0.1.22"
log = "0.4.3"




[package.metadata.deb]
maintainer = "Jovansonlee Cesar <ivanceras@gmail.com>"
copyright = "2017, Jovansonlee Cesar <ivanceras@gmail.com>"
license-file = ["../LICENSE", "4"]
extended-description = """\
A user-friendly database interface for \
PostgreSQL."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["../target/release/diwata", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/diwata/README", "644"],
    ["../public/*", "var/lib/diwata/", "644"],
]

