[package]
name = "web-client"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]

[dependencies]
dataview = { path = "../dataview" }
sqlparser = "0.1.8"
csv = "1.0.2"
rustorm = "0.11"
browser = { path = "../../../caesar/crates/browser" }


[dev-dependencies]
wasm-bindgen-test = "0.2.33"
console_error_panic_hook = "0.1.5"

[dev-dependencies.web-sys]
version = "0.3"
features = [
    "DomTokenList",
    "HtmlInputElement",
    "Event",
    "MouseEvent",
    "InputEvent",
    "console",
]
