[package]
name = "webclient"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
sauron = "0.4.0"
sauron_vdom = "0.4.0"
#sauron = { path = "../../../sauron" }
#sauron_vdom = { path = "../../../sauron/crates/sauron_vdom" }
dataview = { path = "../dataview" }
console_error_panic_hook = "0.1"
js-sys = "0.3"
lazy_static = "1.0"
nalgebra = "0.18.0"
wee_alloc = { version = "0.4.3", optional = true }

[dependencies.wasm-bindgen]
version = "0.2.33"
features = ["default", "nightly"]

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "History",
    "Location",
    "Node",
    "NodeList",
    "Text",
    "Window",
    "HtmlCollection",
]

