[package]
name = "webclient"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
sauron = {version = "0.6.0", features = [] }
data_table = { path = "../data_table" }
# we uses the objects in diwata intel and in rustorm, but not the database objects
diwata_intel = { path = "../intel" , features = ["with-rustorm"]}
console_error_panic_hook = { version = "0.1", optional = true }
js-sys = "0.3"
lazy_static = "1.0"
nalgebra = "0.18.0"
wee_alloc = { version = "0.4.3", optional = true }
ron = "0.5.1"

[dependencies.wasm-bindgen]
version = "0.2.33"
features = ["default", "nightly"]

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Document",
    "Element",
    "Event",
    "EventTarget",
    "History",
    "Location",
    "Node",
    "NodeList",
    "Text",
    "Window",
    "HtmlCollection",
    "Response",
]

